# youai

./: .coderabbit.yaml  .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  MODEL_TIERS.md  MVP.md  NEXT_STEPS.md  PIPELINE.md  PRODUCT.md  REVIEW_PIPELINE_REPLICA_2026-06-23.md  SECURITY.md  SECURITY_MODEL.md
native/: CMakeLists.txt  youai-pipeline-step.cpp
registry/: manifest.json
scripts/: benchmark-cluster.sh  benchmark-model.sh  build-pipeline-step.sh  clean-coordinator.sh  download-model.sh  install.sh  setup-llama.sh  setup-pipeline-activation-mac.sh  setup-pipeline-cluster.sh  setup-pipeline-gguf-mac.sh  setup-pipeline-mac.sh  setup-replica-cluster.sh  setup-replica-mac.sh  split-model-layers.py  split-model.sh  test-cluster.sh  test-replica-round-robin.sh  test-shard-pipeline-activation.sh  test-shard-pipeline-gguf.sh  test-shard-pipeline.sh  ubuntu-test-vm.sh
youai-common/: Cargo.toml
youai-common/src/: chat_template.rs  compute.rs  lib.rs  signing.rs
youai-coordinator/: Cargo.toml
youai-coordinator/src/: api.rs  auth.rs  cache.rs  db.rs  gateway.rs  main.rs  pipeline.rs  priority.rs  registry.rs
youai-governor/: Cargo.toml
youai-governor/src/: lib.rs  main.rs
youai-guard/: Cargo.toml
youai-guard/src/: lib.rs  limits.rs  logging.rs  main.rs  monitor.rs
youai-guard/src/platform/: linux.rs  macos.rs  mod.rs
youai-node/: Cargo.toml
youai-node/src/: main.rs  registry_verify.rs  runtime.rs
youai-web/: README.md  package.json
youai-web/public/: index.html
youai-worker/: Cargo.toml
youai-worker/src/: lib.rs  llama.rs  main.rs  pipeline.rs  pipeline_daemon.rs  server.rs  shards.rs
