[workspace]
resolver = "2"
members = [
    "youai-guard",
    "youai-node",
    "youai-worker",
    "youai-coordinator",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/cesarfavero/youai"
authors = ["YouAI Contributors"]
rust-version = "1.75"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1", features = ["full"] }