[workspace]
resolver = "2"
members = [
    "youai-common",
    "youai-guard",
    "youai-node",
    "youai-worker",
    "youai-coordinator",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/cesarfavero/youai"
authors = ["YouAI Contributors"]
rust-version = "1.75"

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
hmac = "0.13"
sha2 = "0.10"
hex = "0.4"
youai-common = { path = "youai-common" }
youai-guard = { path = "youai-guard" }