[package]
name = "youai-common"
description = "Shared types and config for YouAI crates"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
dirs.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true