[package]
name = "youai-guard"
description = "Resource guard for YouAI nodes — RAM/CPU/GPU limits and watchdog"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "youai-guard"
path = "src/main.rs"

[dependencies]
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true