[package]
name = "youai-guard"
description = "Resource guard for YouAI nodes — RAM/CPU/GPU limits and watchdog"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
name = "youai_guard"
path = "src/lib.rs"

[[bin]]
name = "youai-guard"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
libc.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3"