[package]
name = "youai-node"
description = "YouAI node CLI — install, config, start, pause, status"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "youai-node"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
libc.workspace = true
chrono.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
youai-common.workspace = true
sha2.workspace = true
hex.workspace = true