[package]
name = "youai-worker"
description = "YouAI inference worker — llama.cpp wrapper for local model execution"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
name = "youai_worker"
path = "src/lib.rs"

[[bin]]
name = "youai-worker"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
youai-common.workspace = true